# knapsack_desktop

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
src/: .env.example  .gitattributes  (+11 more)
src/src-tauri/: .taurignore  Cargo.toml  Info.plist  diesel.toml  grammar.js  tauri.conf.json  tauri.entitlements
src/src-tauri/binaries/: .gitattributes
src/src-tauri/capabilities/: dialog.json
src/src-tauri/icons/: Knapsack.icns  icon.icns
src/src-tauri/resources/: signin_error.html  signin_success.html
src/src-tauri/resources/clawdbot/: LICENSE
src/src-tauri/resources/clawdbot/scripts/: postinstall.js
src/src-tauri/resources/clawdbot/skills/anthropic-api/: SKILL.md
src/src-tauri/resources/clawdbot/skills/aws/: SKILL.md
src/src-tauri/resources/clawdbot/skills/azure/: SKILL.md
src/src-tauri/resources/clawdbot/skills/cloudflare/: SKILL.md
src/src-tauri/resources/clawdbot/skills/datadog/: SKILL.md
src/src-tauri/resources/clawdbot/skills/discord/: SKILL.md
src/src-tauri/resources/clawdbot/skills/docker/: SKILL.md
src/src-tauri/resources/clawdbot/skills/elasticsearch/: SKILL.md
src/src-tauri/src/: config.rs  constants.rs  error.rs  file_upload.rs  grammar.json  local_fs.rs  main.rs  parser.c  search.rs  spotlight.rs  transcribe.rs  user.rs
src/src-tauri/src/api/: app_info.rs  audio.rs  document.rs  mod.rs  notes.rs
src/src-tauri/src/audio/: audio.rs  encode.rs  macos.rs  microphone.rs  mod.rs  permission.rs  transcribe.rs  utils.rs  windows.rs
src/src-tauri/src/automations/: api.rs
src/src-tauri/src/clawd/: browser.rs  channels.rs  chat_agent.rs  gateway_ws.rs  gmail.rs  meeting_context.rs  mod.rs  service.rs  sidecar.rs  skills_catalog.json
src/src-tauri/src/connections/: api.rs  data_source.rs  mod.rs  utils.rs
src/src-tauri/src/connections/google/: auth.rs  calendar.rs  constants.rs  drive.rs  gmail.rs  mod.rs  profile.rs  types.rs
src/src-tauri/src/connections/local/: constants.rs  files.rs  mod.rs
src/src-tauri/src/connections/microsoft/: auth.rs  calendar.rs  constants.rs  mod.rs  outlook.rs  profile.rs
src/src-tauri/src/db/: db.rs  diesel_setup.rs  mod.rs  schema.rs
src/src-tauri/src/db/models/: automation.rs  automation_run.rs  automation_step.rs  cadence_trigger.rs  calendar_event.rs  connection.rs  data_source_trigger.rs  document.rs  drive_document.rs  email.rs  feed_item.rs  local_file.rs  message.rs  message_feedback.rs  mod.rs  thread.rs  thread_with_messages.rs  token_usage.rs  transcript.rs  user.rs  user_connection.rs
src/src-tauri/src/llm/: api.rs  cost.rs  mod.rs  prompt.rs  types.rs  usage_api.rs
src/src-tauri/src/llm/groq/: llm.rs
src/src-tauri/src/llm/llama_binding/: completion.rs  llm.rs  mod.rs  process.rs  prompt.rs  stop_handler.rs
src/src-tauri/src/llm/use_cases/: complete.rs  mod.rs  stop.rs
src/src-tauri/src/memory/: mod.rs  qdrant.rs  semantic.rs  text_splitter.rs
src/src-tauri/src/migrations/2025-01-16-202832_initial/: down.sql  up.sql
src/src-tauri/src/migrations/2025-01-20-125950_feed_items_soft_delete/: down.sql  up.sql
src/src-tauri/src/migrations/2025-01-27-175534_add-refresh-token-connection/: down.sql  up.sql
src/src-tauri/src/migrations/2025-01-29-145903_add_uuid_to_users/: down.sql  up.sql
src/src-tauri/src/migrations/2025-02-10-121901_thread-record-flag/: down.sql  up.sql
src/src-tauri/src/migrations/2025-02-11-151044_thread-saved-transcript/: down.sql  up.sql
src/src-tauri/src/migrations/2025-02-12-165847_add_thread_id_emails/: down.sql  up.sql
src/src-tauri/src/migrations/2025-03-10-194301_add-title-timestamp/: down.sql  up.sql
src/src-tauri/src/migrations/2025-03-11-195036_email-is-sttared/: down.sql  up.sql
src/src-tauri/src/migrations/2025-03-24-161519_email-is-read/: down.sql  up.sql
src/src-tauri/src/migrations/2025-04-02-205117_thread_meeting_template/: down.sql  up.sql
src/src-tauri/src/migrations/2025-04-11-142426_fix-thread-prompt-template/: up.sql
src/src-tauri/src/migrations/2025-04-11-143355_email-is-deleted/: down.sql  up.sql
src/src-tauri/src/migrations/2025-04-21-180115_mark_feed_items_not_deleted/: up.sql
src/src-tauri/src/migrations/2025-04-30-160000_add_knapsack_access_key_connection/: down.sql  up.sql
src/src-tauri/src/migrations/2026-02-06-000000_create_token_usage/: down.sql  up.sql
src/src-tauri/src/server/: actix.rs  mod.rs  qdrant.rs  status.rs
src/src-tauri/src/utils/: log.rs  mod.rs  platform.rs
(+233 files in other folders)
